[10][container]:test - extend flashcard review e2e tests